# speedreaderclone

./: .gitignore  project.py  pyproject.toml  requirements.txt  spdrdr - Copy.spec  spdrdr.spec  speed_read_r.kv  what I did.txt
config/: settings.db  settings.txt
